overview: Do not animate overview header on enter exit.

This was already happening on tablet mode. Ux said it is ok to match
the two now. Also change some values for the header fade in animation.

Test: manual
Bug: 829292
Change-Id: I428081f0d19d1b8508e8576f5ea8a36e75843e6b
Reviewed-on: https://chromium-review.googlesource.com/1164534
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Cr-Commit-Position: refs/heads/master@{#581613}
Former-commit-id: cce7708f4c3f375a5c3675585083a2d0a0952f2e